--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "cypress": "^12.15.0"
+    "cypress": "^12.15.0",
+    "faker": "^5.5.3",
+    "mathjs": "^11.8.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "cypress-real-events": "^1.8.1"
   }
 }
